Fix plot ribbon copy buttons * fix button alignment with text * fix hidden tooltip copy buttons

--- a/webview/src/plots/components/ribbon/styles.module.scss
+++ b/webview/src/plots/components/ribbon/styles.module.scss
@@ -4,7 +4,7 @@
   display: none;
   position: absolute;
   right: 0;
-  top: 3px;
+  top: 0;
 }
 
 .tooltipColumn {
@@ -38,9 +38,9 @@
 
   .copyButton {
     opacity: 0;
-    display: inline;
+    display: inline-block;
     position: static;
-    margin-top: 2px;
+    vertical-align: top;
     font-size: 0.8125rem;
   }
 
